--- a/index.html
+++ b/index.html
@@ -16,7 +16,108 @@
     <main>
       <section class="carrusel">
         <h2 class="carrusel__title">Aguilas letales</h2>
-        <section class="carrusel__items">
+        <section class="carrusel__items carrusel__js">
+          <div class="item">
+            <img
+              src="./assets/pexels-aguila-1.jpg"
+              alt="aguila"
+              height="200"
+              width="300"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="./assets/pexels-aguila-10.jpg"
+              alt="aguila"
+              height="200"
+            />
+          </div>
+
+          <div class="item">
+            <img
+              src="./assets/pexels-aguila-2.jpg"
+              alt="aguila"
+              height="200"
+              width="300"
+            />
+          </div>
+
+          <div class="item">
+            <img
+              src="./assets/pexels-aguila-3.jpg"
+              alt="aguila"
+              height="200"
+              width="300"
+            />
+          </div>
+
+          <div class="item">
+            <img
+              src="./assets/pexels-aguila-4.jpg"
+              alt="aguila"
+              height="200"
+              width="300"
+            />
+          </div>
+
+          <div class="item">
+            <img src="./assets/pexels-aguila-9.jpg" alt="aguila" height="200" />
+          </div>
+
+          <div class="item">
+            <img
+              src="./assets/pexels-aguila-5.jpg"
+              alt="aguila"
+              height="200"
+              width="300"
+            />
+          </div>
+
+          <div class="item">
+            <img
+              src="./assets/pexels-aguila-6.jpg"
+              alt="aguila"
+              height="200"
+              width="300"
+            />
+          </div>
+
+          <div class="item">
+            <img
+              src="./assets/pexels-aguila-11.jpg"
+              alt="aguila"
+              height="200"
+            />
+          </div>
+
+          <div class="item">
+            <img
+              src="./assets/pexels-aguila-7.jpg"
+              alt="aguila"
+              height="200"
+              width="300"
+            />
+          </div>
+
+          <div class="item">
+            <img
+              src="./assets/pexels-aguila-8.jpg"
+              alt="aguila"
+              height="200"
+              width="300"
+            />
+          </div>
+
+          <div class="item">
+            <img
+              src="./assets/pexels-aguila-12.jpg"
+              alt="aguila"
+              height="200"
+            />
+          </div>
+        </section>
+
+        <section class="carrusel__items carrusel__css">
           <div class="item">
             <img
               src="./assets/pexels-aguila-1.jpg"
@@ -117,7 +218,7 @@
           </div>
         </section>
       </section>
-      <script src="./index.js"></script>
+      <script src="./index.js" type="module"></script>
     </main>
   </body>
 </html>
